--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
   "repository": "https://github.com/ashleymoogle/webpack-inject.git",
   "author": "Romain Bonhomme <romain.bonhomme89@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test":"jest"
+  },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "webpack": "^4.26.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   }
 }
