--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
   "author": "Romain Bonhomme <romain.bonhomme89@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "test":"jest"
+    "test": "jest"
   },
   "dependencies": {
     "lodash": "^4.17.11",
     "webpack": "^4.26.0"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "css-loader": "^1.0.1",
+    "jest": "^23.6.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "vue": "^2.5.17",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.1.4"
   },
   "jest": {
     "testEnvironment": "node",
